# static/swagger_doc.json
@@ -167,6 +167,9 @@
       },
       "post": {
         "responses": {
+          "422": {
+            "$ref": "#/components/responses/UNPROCESSABLE_ENTITY"
+          },
           "201": {
             "description": "Created",
             "content": {
@@ -176,9 +179,6 @@
                 }
               }
             }
-          },
-          "422": {
-            "$ref": "#/components/responses/UNPROCESSABLE_ENTITY"
           },
           "default": {
             "$ref": "#/components/responses/DEFAULT_ERROR"
@@ -215,6 +215,9 @@
       },
       "put": {
         "responses": {
+          "422": {
+            "$ref": "#/components/responses/UNPROCESSABLE_ENTITY"
+          },
           "200": {
             "description": "OK",
             "content": {
@@ -224,9 +227,6 @@
                 }
               }
             }
-          },
-          "422": {
-            "$ref": "#/components/responses/UNPROCESSABLE_ENTITY"
           },
           "default": {
             "$ref": "#/components/responses/DEFAULT_ERROR"
@@ -271,6 +271,9 @@
     "/users/json/{uid}/contact": {
       "post": {
         "responses": {
+          "422": {
+            "$ref": "#/components/responses/UNPROCESSABLE_ENTITY"
+          },
           "201": {
             "description": "Created",
             "content": {
@@ -280,9 +283,6 @@
                 }
               }
             }
-          },
-          "422": {
-            "$ref": "#/components/responses/UNPROCESSABLE_ENTITY"
           },
           "default": {
             "$ref": "#/components/responses/DEFAULT_ERROR"
@@ -317,6 +317,9 @@
     "/users/json/{uid}/role": {
       "post": {
         "responses": {
+          "422": {
+            "$ref": "#/components/responses/UNPROCESSABLE_ENTITY"
+          },
           "201": {
             "description": "Created",
             "content": {
@@ -326,9 +329,6 @@
                 }
               }
             }
-          },
-          "422": {
-            "$ref": "#/components/responses/UNPROCESSABLE_ENTITY"
           },
           "default": {
             "$ref": "#/components/responses/DEFAULT_ERROR"
@@ -359,11 +359,38 @@
           }
         }
       ]
+    },
+    "/search": {
+      "post": {
+        "responses": {
+          "422": {
+            "$ref": "#/components/responses/UNPROCESSABLE_ENTITY"
+          },
+          "200": {
+            "description": "OK"
+          },
+          "default": {
+            "$ref": "#/components/responses/DEFAULT_ERROR"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Search"
+              }
+            }
+          }
+        },
+        "tags": [
+          "Search"
+        ]
+      }
     }
   },
   "info": {
-    "description": "Project by Mohammad Jayeed",
-    "title": "User Data REST API",
+    "title": "Stores REST API",
     "version": "v1"
   },
   "tags": [
@@ -382,6 +409,10 @@
     {
       "name": "contact, role",
       "description": "Create Contact and Role For JSON User"
+    },
+    {
+      "name": "Search",
+      "description": "Search by first_name | company | country | Role Name"
     }
   ],
   "openapi": "3.0.3",
@@ -597,6 +628,14 @@
         "required": [
           "name"
         ]
+      },
+      "Search": {
+        "type": "object",
+        "properties": {
+          "term": {
+            "type": "string"
+          }
+        }
       }
     },
     "responses": {
@@ -628,7 +667,5 @@
         "bearerFormat": "JWT"
       }
     }
-    
-      }
-    }
-  
+  }
+}
